--- a/css/components/footer.css
+++ b/css/components/footer.css
@@ -9,13 +9,21 @@
 }
 
 .footer-text {
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
   row-gap: 50px;
 }
 
 .info {
-  max-width: 220px;
+  grid-column: 1 / 4;
+}
+
+.legal {
+  grid-column: 2 / 4;
+}
+
+.social-media {
+  grid-column: 1/4;
 }
 
 .info h3 {
@@ -42,18 +50,11 @@
   margin-top: 20px;
 }
 
-.explore-legal {
-  display: flex;
-  column-gap: 50px;
-}
-
-.explore-legal h4,
 .explore h4,
 .legal h4 {
   font-size: 16px;
 }
 
-.explore-legal ul,
 .explore ul,
 .legal ul {
   display: flex;
@@ -62,7 +63,6 @@
   margin-top: 20px;
 }
 
-.explore-legal li,
 .explore li,
 .legal li {
   list-style-type: none;
@@ -114,14 +114,20 @@
 }
 
 @media (width >= 50.625em) {
-  .footer-text.web {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+  .footer-text {
+    grid-template-columns: repeat(4, 1fr);
   }
 
-  .footer-text.mobile {
-    display: none;
+  .explore {
+    justify-self: center;
+  }
+
+  .legal {
+    justify-self: center;
+  }
+
+  .footer-text > * {
+    grid-column: auto;
   }
 
   .info p {
